# Portfolio-

backend_and_rag/: main.py  pyproject.toml
backend_and_rag/rag_system/: db.sqlite3  requirements.txt
backend_and_rag/rag_system/rag_app/: rag_pipeline.py  test_data_loader.py  views.py
backend_and_rag/rag_system/rag_app/data/: ai_journey.txt  biography.txt  contact.txt  deployment_github.txt  dsa_journey.txt  education.txt  personality.txt  profile.txt  programming_journey.txt  programming_journey2.txt  programming_journey3.txt
backend_and_rag/rag_system/rag_app/rag_store/: bm25.pkl  faiss.index  metadata.pkl
backend_and_rag/rag_system/rag_app/src/: data_loader.py  embedding.py  retriever.py  search.py  vectorstore.py
backend_and_rag/rag_system/rag_system/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/: Back.jsx
frontend/src/: App.jsx  ChatBar.jsx  Education.jsx  LanguageContext.jsx  LoadingScreen.jsx  Navbar.jsx  Portfolio.jsx  ShortProfile.jsx  index.css  main.jsx
frontend/src/components/: ChatBar.jsx  Navbar.jsx  ProOrbit.jsx
frontend/src/layout/: Back.jsx
frontend/src/locales/: en.json  hi.json
frontend/src/sections/: Education.jsx  Portfolio.jsx  ShortProfile.jsx
