[project]
name = "backend-and-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "docx2txt>=0.9",
    "faiss-cpu>=1.14.3",
    "groq<1",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.4",
    "pygithub>=2.9.1",
    "pypdf>=6.14.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "unstructured>=0.24.0",
]
